--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/vigas147/unraid-tower-control-api#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "express-basic-auth": "^1.1.6"
+    "node-fetch": "^2.6.1"
   }
 }
